fixing spacing

--- a/app/[locale]/home/components/BuiltWithAndFor/BuiltWithAndFor.module.css
+++ b/app/[locale]/home/components/BuiltWithAndFor/BuiltWithAndFor.module.css
@@ -23,9 +23,9 @@
       gap: var(--space-24);
     }
 
-    @media (max-width: 1280px) {
+    @media (max-width: 1140px) {
       grid-template-columns: 1fr;
-      padding: var(--space-32) var(--space-48) var(--space-32) var(--space-48);
+      padding: var(--space-32) var(--space-64) var(--space-32) var(--space-64);
       gap: var(--space-24);
     }
 
