--- a/app/[locale]/home/components/HowWeHelp/HowWeHelp.module.css
+++ b/app/[locale]/home/components/HowWeHelp/HowWeHelp.module.css
@@ -4,12 +4,12 @@
 
   @media (max-width: 1140px) {
     padding: var(--space-64) 0 var(--space-16);
-    margin: 0;;
+    margin: 0 var(--space-32);
   }
 
   @media (max-width: 960px) {
     padding: var(--space-64) 0 var(--space-16);
-    margin: 0;;
+    margin: 0;
   }
 }
 
